Remove -XX:MaxPermSize=256M