@@ -64,7 +64,7 @@ lazy val plugin = (projectMatrix in file("plugin"))
     },
     scriptedBufferLog := false,
     scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-      Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+      Seq("-Dplugin.version=" + version.value)
     },
     buildInfoKeys := Seq[BuildInfoKey](name, version, scalaVersion, sbtVersion),
     buildInfoPackage := "com.eed3si9n.ifdef.sbtifdef",
